--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,6 +47,9 @@ init:
     - aws/rhel-8.6-nightly-aarch64
     - aws/rhel-9.0-nightly-x86_64
     - aws/rhel-9.0-nightly-aarch64
+    - aws/centos-stream-9-x86_64
+    - aws/centos-stream-9-aarch64
+
   INTERNAL_NETWORK: ["true"]
 
 RPM:
@@ -159,6 +162,8 @@ Base:
           - aws/rhel-8.6-nightly-aarch64
           - aws/rhel-9.0-nightly-x86_64
           - aws/rhel-9.0-nightly-aarch64
+          - aws/centos-stream-9-x86_64
+          - aws/centos-stream-9-aarch64
         INTERNAL_NETWORK: ["true"]
 
 Manifests:
@@ -203,6 +208,8 @@ Regression:
           - aws/rhel-8.6-nightly-aarch64
           - aws/rhel-9.0-nightly-x86_64
           - aws/rhel-9.0-nightly-aarch64
+          - aws/centos-stream-9-x86_64
+          - aws/centos-stream-9-aarch64
         INTERNAL_NETWORK: ["true"]
 
 Image Tests:
@@ -256,6 +263,7 @@ OSTree:
           - rhos-01/rhel-8.6-nightly-x86_64-large
           - rhos-01/rhel-9.0-nightly-x86_64
           - rhos-01/centos-stream-8-x86_64
+          - rhos-01/centos-stream-8-x86_64
 
 New OSTree:
   stage: test
@@ -269,6 +277,7 @@ New OSTree:
           - rhos-01/rhel-8.6-nightly-x86_64-large
           - rhos-01/rhel-9.0-nightly-x86_64-large
           - rhos-01/centos-stream-8-x86_64
+          - rhos-01/centos-stream-9-x86_64-large
 
 OSTree simplified installer:
   stage: test
@@ -282,6 +291,7 @@ OSTree simplified installer:
           - rhos-01/rhel-8.6-nightly-x86_64-large
           - rhos-01/centos-stream-8-x86_64
           - rhos-01/rhel-9.0-nightly-x86_64
+          - rhos-01/centos-stream-9-x86_64-large
 
 OSTree raw image:
   stage: test
@@ -295,6 +305,7 @@ OSTree raw image:
           - rhos-01/rhel-8.6-nightly-x86_64
           - rhos-01/centos-stream-8-x86_64
           - rhos-01/rhel-9.0-nightly-x86_64
+          - rhos-01/centos-stream-9-x86_64-large
 
 .INTEGRATION_TESTS: &INTEGRATION_TESTS
   SCRIPT:
@@ -325,6 +336,7 @@ Integration:
           - aws/rhel-8.5-ga-x86_64
           - aws/rhel-8.6-nightly-x86_64
           - aws/rhel-9.0-nightly-x86_64
+          - aws/centos-stream-9-x86_64
         INTERNAL_NETWORK: ["true"]
       - SCRIPT:
           - azure_hyperv_gen2.sh
@@ -376,6 +388,7 @@ libvirt:
           - rhos-01/rhel-8.5-ga-x86_64
           - rhos-01/rhel-8.6-nightly-x86_64
           - rhos-01/rhel-9.0-nightly-x86_64
+          - rhos-01/centos-stream-9-x86_64
         INTERNAL_NETWORK: ["true"]
 
 RHEL 9 on 8:
