ci/container: switch to CS8
Fedora 33 is EOL, let's use something that will last longer than a single
Fedora release.

Signed-off-by: Ondřej Budai <ondrej@budai.cz>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -86,7 +86,7 @@ Container:
   parallel:
     matrix:
       - RUNNER:
-          - aws/fedora-33-x86_64
+          - aws/centos-stream-8-x86_64
 
 Packer:
   stage: test
