--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -460,6 +460,7 @@ Installer:
       - RUNNER:
           - rhos-01/rhel-8.6-nightly-x86_64
           - rhos-01/rhel-9.0-nightly-x86_64
+          - rhos-01/centos-stream-9-x86_64
 
 SCHEDULED_CLOUD_CLEANER:
   stage: cleanup
