templates/dashboards: Fixed grafana uids
This way we get a nice URL `.../d/image-builder-(composer|worker)`.

--- a/templates/dashboards/grafana-dashboard-image-builder-worker-general.configmap.yml
+++ b/templates/dashboards/grafana-dashboard-image-builder-worker-general.configmap.yml
@@ -1771,6 +1771,6 @@ data:
       },
       "timezone": "",
       "title": "Image Builder Worker",
-      "uid": "y8lhL9hnz",
+      "uid": "image-builder-worker",
       "version": 1
     }
