--- a/templates/dashboards/grafana-dashboard-image-builder-composer-general.configmap.yml
+++ b/templates/dashboards/grafana-dashboard-image-builder-composer-general.configmap.yml
@@ -1323,6 +1323,6 @@ data:
       },
       "timezone": "",
       "title": "Image Builder Composer",
-      "uid": "cNGfs4Knz",
+      "uid": "image-builder-composer",
       "version": 3
     }
