gitlab-ci: add internal network to runner
Scheduled cloud cleaner runner needs access to internal network to
interact with vmware.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -469,6 +469,7 @@ SCHEDULED_CLOUD_CLEANER:
     - terraform
   variables:
     RUNNER: aws/centos-stream-8-x86_64
+    INTERNAL_NETWORK: "true"
   rules:
     - if: '$CI_PIPELINE_SOURCE == "schedule" && $CLEANUP == "true"'
   script:
